# PrismLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md
.github/workflows/: build.yml
cmake/: FindLibAria2.cmake  fix_macos_bundle.py
launcher/: Application.cpp  Application.h  CMakeLists.txt  ResourceDownloadTask.cpp  Version.cpp  Version.h  install_prereqs.cmake.in  main.cpp
launcher/hematite/: CMakeLists.txt  Cargo.toml  Readme.md
launcher/hematite/xtask/: Cargo.toml
launcher/hematite/xtask/src/: main.rs
launcher/modplatform/modpacksch/: FTBPackInstallTask.cpp
launcher/net/: Aria2NetworkManager.h
launcher/ui/components/: ListBasedTextArea.qml
launcher/ui/dialogs/: AboutDialog.cpp  AboutDialog.ui
launcher/ui/pages/global/: JavaPage.cpp  JavaPage.h
launcher/ui/pages/instance/: InstanceSettingsPage.cpp  InstanceSettingsPage.h  InstanceSettingsPage.ui
launcher/ui/themes/: CustomTheme.cpp  FusionTheme.cpp  FusionTheme.h  ITheme.h  SystemTheme.cpp  ThemeManager.cpp  ThemeManager.h
launcher/ui/widgets/: JavaSettingsWidget.cpp  ThemeCustomizationWidget.ui
