
[workspace]
members = [ "xtask" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
  "Prism Launcher Contributors",
  "Rachel Powers <508861+Ryex@users.noreply.github.com>",
]
description = "A rust extension crate for Prism Launcher"
readme = "Readme.md"
homepage = "https://prismlauncher.org/"
repository = "https://github.com/PrismLauncher/PrismLauncher"
license = "GPL-3.0"
license-file = "../LICENSE"


[workspace.dependencies]
cxx = {version = "1.0.128", features = ["c++17"]}
cxx-qt = "0.6"
cxx-qt-lib = { version = "0.6", default-features = false, features = [
  "qt_gui",
] }
cxx-qt-build = "0.6"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
[profile.dev]
opt-level = 1
