[package]
name = "xtask"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
indexmap = { version = "2.2.6", features = ["serde"] }
# onig = "6.4.0"
serde = "1.0.202"
serde_derive = "1.0.202"
serde_ignored = "0.1.10"
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
serde_with = "3.8.1"
thiserror = "1.0.61"

tracing = "0.1.40"
num-integer = "0.1.46"
num = "0.4.3"
color-eyre = "0.6.3"
cargo_toml = "0.20.5"
regex = "1.11.0"
indoc = "2.0.5"
